fixed big bug with overflow

--- a/css/chats.css
+++ b/css/chats.css
@@ -344,7 +344,6 @@
 
 #textarea-message_label {
     font-size: var(--font-size-2);
-    line-height: var(--font-size-2);
     color: var(--else-text-color-50);
     position: absolute;
     left: 1.6rem;
