--- a/css/profile.css
+++ b/css/profile.css
@@ -69,7 +69,7 @@
 
 .profile__user-info .first-and-second-names {
     font-weight: 600;
-    line-height: 1;
+    font-size: var(--font-size-4);
     font-size: var(--font-size-4);
     position: relative;
     text-overflow: ellipsis;
@@ -120,7 +120,6 @@
 
 .profile__user-info .username {
     color: var(--main-accent-color);
-    line-height: 1;
     margin-top: 1rem;
     transition: 0.2s;
     cursor: pointer;
@@ -193,7 +192,6 @@
 
 .profile__user-info .description {
     margin-top: 1.1rem;
-    line-height: 1;
     color: var(--else-text-color-50);
 }
 
@@ -207,7 +205,6 @@
     display: block;
     font-size: var(--font-size-1);
     margin-top: 1.1rem;
-    line-height: 1;
     transition: 0.2s;
 }
 
@@ -222,7 +219,6 @@
     gap: 1.232rem;
     font-size: var(--font-size-4);
     font-weight: 600;
-    line-height: 1;
     margin-top: 2.6rem;
 }
 
@@ -434,7 +430,6 @@
 
 #textarea-post_label {
     font-size: var(--font-size-1);
-    line-height: var(--font-size-1);
     color: var(--else-text-color-50);
     position: absolute;
     left: 2.7rem;
@@ -825,6 +820,7 @@ span.for-friends {
     max-width: 75px;
     white-space: nowrap;
     overflow-x: hidden;
+    overflow-y: visible;
 }
 
 .friend-name-and-status {
