--- a/css/trophy.css
+++ b/css/trophy.css
@@ -132,6 +132,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow-x: hidden;
+    overflow-y: visible;
     display: block;
     width: min-content;
     max-width: 13rem;
